Almost add action device CRUD
