# openapi/dist/openapi.yaml
@@ -359,6 +359,37 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  /action-devices:
+    parameters: []
+    post:
+      description: Create action device
+      tags:
+        - trigger-devices
+      security:
+        - jwt-bearer:
+            - admin
+      requestBody:
+        description: An action device to create
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ActionDeviceCreate"
+        required: true
+      parameters:
+        - $ref: "#/components/parameters/SelectActionDevice"
+      responses:
+        "201":
+          description: The action device was created. Optional object of it
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ActionDeviceOptional"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthenticated"
+        "403":
+          $ref: "#/components/responses/Forbidden"
   "/users/{userId}":
     parameters:
       - in: path
@@ -535,6 +566,8 @@ paths:
           $ref: "#/components/responses/Forbidden"
         "404":
           $ref: "#/components/responses/NotFound"
+  "/action-devices/{actionDeviceId}":
+    parameters: []
 components:
   securitySchemes:
     jwt-bearer:
@@ -557,6 +590,9 @@ components:
     Id:
       type: integer
       minimum: 1
+    Decimal_10_6:
+      type: string
+      format: decimal-10-6
     IdList:
       type: array
       items:
@@ -725,7 +761,6 @@ components:
           type: string
         type:
           type: string
-      minProperties: 1
       additionalProperties: false
     TriggerDeviceUpdate:
       type: object
@@ -787,6 +822,73 @@ components:
           type: string
         type:
           type: string
+      additionalProperties: false
+    ActionDeviceCreate:
+      type: object
+      required:
+        - physicalAddress
+        - status
+        - name
+        - type
+        - hourlyRate
+      properties:
+        physicalAddress:
+          type: string
+          format: physical-address
+        status:
+          type: integer
+          format: int32
+          minimum: 1
+          maximum: 3
+        name:
+          type: string
+        type:
+          type: string
+        hourlyRate:
+          type: string
+          format: decimal-10-6
+      additionalProperties: false
+    ActionDeviceUpdate:
+      type: object
+      properties:
+        physicalAddress:
+          type: string
+          format: physical-address
+        status:
+          type: integer
+          format: int32
+          minimum: 1
+          maximum: 3
+        name:
+          type: string
+        type:
+          type: string
+        hourlyRate:
+          type: string
+          format: decimal-10-6
+      minProperties: 1
+      additionalProperties: false
+    ActionDeviceOptional:
+      type: object
+      properties:
+        actionDeviceId:
+          type: integer
+          minimum: 1
+        physicalAddress:
+          type: string
+          format: physical-address
+        status:
+          type: integer
+          format: int32
+          minimum: 1
+          maximum: 3
+        name:
+          type: string
+        type:
+          type: string
+        hourlyRate:
+          type: string
+          format: decimal-10-6
       additionalProperties: false
   responses:
     OpenApiBadRequest:
@@ -938,6 +1040,23 @@ components:
             - status
             - name
             - type
+        uniqueItems: true
+        minItems: 1
+    SelectActionDevice:
+      in: query
+      name: select
+      description: Fields in json you want to consume
+      schema:
+        type: array
+        items:
+          type: string
+          enum:
+            - actionDeviceId
+            - physicalAddress
+            - status
+            - name
+            - type
+            - hourlyRate
         uniqueItems: true
         minItems: 1
 x-express-openapi-disable-defaults-middleware: true
